completed calculator project

--- a/index.html
+++ b/index.html
@@ -10,28 +10,46 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="title">
+            <h1>Calculator</h1>
+        </div>
+        <div class="themes">
+            <button class="default-theme">Default</button>
+            <button class="purple-theme">Purple</button>
+            <button class="blue-theme">Blue</button>
+        </div>
+    </div>
     <div class="calculator">
         <div class="container">
-            <div class="display">0</div>
+            <div class="display">
+                <div class="sub-display">0</div>
+                <div class="main-display">0</div>
+            </div>
             <div class="button-container">
-                <button id="operator">C</button>
-                <button id="operator">%</button>
-                <button id="operator">/</button>
-                <button id="operator">*</button>
-                <button id="number">7</button>
-                <button id="number">8</button>
-                <button id="number">9</button>
-                <button id="operator">+</button>
-                <button id="number">4</button>
-                <button id="number">5</button>
-                <button id="number">6</button>
-                <button id="operator">-</button>
-                <button id="number">1</button>
-                <button id="number">2</button>
-                <button id="number">3</button>
-                <button id="operator">=</button>
+                <button id="c" class="buttons">C</button>
+                <button id="operator" class="buttons">%</button>
+                <button id="operator" class="buttons">/</button>
+                <button id="operator" class="buttons">*</button>
+                <button id="number" class="buttons">7</button>
+                <button id="number" class="buttons">8</button>
+                <button id="number" class="buttons">9</button>
+                <button id="operator" class="buttons">+</button>
+                <button id="number" class="buttons">4</button>
+                <button id="number" class="buttons">5</button>
+                <button id="number" class="buttons">6</button>
+                <button id="operator" class="buttons">-</button>
+                <button id="number" class="buttons">1</button>
+                <button id="number" class="buttons">2</button>
+                <button id="number" class="buttons">3</button>
+                <button id="sum" class="buttons">=</button>
+                <button id="number" class="buttons">0</button>
+                <button id="number" class="buttons">.</button>
+                <button id="back" class="buttons">Back</button>
             </div>
         </div>
+    </div>
+    <div class="footer">Made by NinjazZz</div>
 </body>
 
 </html>
