added green theme, changed some of the previous themes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="default-theme">Default</button>
             <button class="purple-theme">Purple</button>
             <button class="blue-theme">Blue</button>
+            <button class="green-theme">Green</button>
         </div>
     </div>
     <div class="calculator">
@@ -28,24 +29,24 @@
             </div>
             <div class="button-container">
                 <button id="c" class="buttons">C</button>
-                <button id="operator" class="buttons">%</button>
-                <button id="operator" class="buttons">/</button>
                 <button id="operator" class="buttons">*</button>
+                <button id="operator" class="buttons">/</button>
+                <button id="back" class="buttons">Back</button>
                 <button id="number" class="buttons">7</button>
                 <button id="number" class="buttons">8</button>
                 <button id="number" class="buttons">9</button>
-                <button id="operator" class="buttons">+</button>
+                <button id="operator" class="buttons">%</button>
                 <button id="number" class="buttons">4</button>
                 <button id="number" class="buttons">5</button>
                 <button id="number" class="buttons">6</button>
-                <button id="operator" class="buttons">-</button>
+                <button id="operator" class="buttons">+</button>
                 <button id="number" class="buttons">1</button>
                 <button id="number" class="buttons">2</button>
                 <button id="number" class="buttons">3</button>
-                <button id="sum" class="buttons">=</button>
-                <button id="number" class="buttons">0</button>
+                <button id="operator" class="buttons">-</button>
                 <button id="number" class="buttons">.</button>
-                <button id="back" class="buttons">Back</button>
+                <button id="number" class="buttons">0</button>
+                <button id="sum" class="buttons">=</button>
             </div>
         </div>
     </div>
