adjusted default color and added a box around title and buttons to be a little more pleasing visually

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
 <body>
     <div class="header">
-        <div class="title">
-            <h1>Calculator</h1>
-        </div>
-        <div class="themes">
-            <button class="default-theme">Default</button>
-            <button class="purple-theme">Purple</button>
-            <button class="blue-theme">Blue</button>
-            <button class="green-theme">Green</button>
+        <div class="header-box">
+            <div class="title">
+                <h1>Calculator</h1>
+            </div>
+            <div class="themes">
+                <button class="default-theme">Default</button>
+                <button class="purple-theme">Purple</button>
+                <button class="blue-theme">Blue</button>
+                <button class="green-theme">Green</button>
+            </div>
         </div>
     </div>
     <div class="calculator">
